# ESP32-P4-WIFI6-Touch-LCD-3.5-update

./: README.md
example/ESP-IDF/04_wifistation/main/: idf_component.yml
example/ESP-IDF/05_sdmmc/: sdkconfig.defaults
example/ESP-IDF/05_sdmmc/main/: Kconfig.projbuild  sd_card_example_main.c
example/ESP-IDF/06_I2SCodec/main/: idf_component.yml
example/ESP-IDF/07_Displaycolorbar/main/: test_esp_lcd.c
example/ESP-IDF/08_lvgl_demo_v9/: sdkconfig.defaults
example/ESP-IDF/08_lvgl_demo_v9/main/: idf_component.yml  main.c
example/ESP-IDF/09_video_lcd_display/: partitions.csv  sdkconfig.defaults
example/ESP-IDF/09_video_lcd_display/main/: CMakeLists.txt  app_video.c  app_video.h  idf_component.yml  main.c
example/ESP-IDF/10_mp4_player/: sdkconfig.defaults
example/ESP-IDF/10_mp4_player/main/: app_extractor.c  idf_component.yml  main.c
example/ESP-IDF/11_esp_brookesia_phone/: CMakeLists.txt
example/ESP-IDF/12_esp32-p4-eye/: sdkconfig.defaults
example/ESP-IDF/12_esp32-p4-eye/main/: CMakeLists.txt  idf_component.yml  main.c  ov5647_custom.json
example/ESP-IDF/12_esp32-p4-eye/main/app/: app_album.c  app_control.c  app_storage.c  app_storage.h
example/ESP-IDF/12_esp32-p4-eye/main/app/AI/: app_ai_detect.cpp
example/ESP-IDF/12_esp32-p4-eye/main/app/Video/: app_video_photo.c  app_video_record.c  app_video_stream.c  app_video_stream.h  app_video_utils.c  app_video_utils.h
example/ESP-IDF/12_esp32-p4-eye/main/ui/: ui.c  ui.h  ui_extra.c  ui_extra.h
example/ESP-IDF/12_esp32-p4-eye/main/ui/screens/: ui_ScreenAlbum.c  ui_ScreenCamera.c  ui_ScreenUSB.c
(+25 files in other folders)
